--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/jest": "~29.5",
     "@types/node": "~20",
+    "@types/tough-cookie": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "~6.15",
     "@typescript-eslint/parser": "~6.15",
     "eslint": "~8.56",
@@ -36,7 +37,9 @@
   "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "node-fetch": "^3.3.2",
+    "fetch-cookie": "^3.0.1",
+    "puppeteer": "^22.6.1",
+    "tough-cookie": "^4.1.3",
     "tslib": "~2.6"
   },
   "volta": {
